Unify on using the MetricId class to avoid creating many instances on the fly.